@@ -3,6 +3,7 @@ Version 1.2.1
 
     - Added `--erase' and `--quiet' command line flags.
     - Added `--blockCacheSync' command line flag.
+    - Eliminate extra copy of blocks when written by block_cache worker threads.
     - Fixed bug in EC layer where dirty data might not be flushed at shutdown.
     - Fixed bug where 'http' was shown instead of 'https' in mount(8) output
       when the --ssl flag was given.
